Fix white space and apply content styling globally

--- a/css/sass/_content.scss
+++ b/css/sass/_content.scss
@@ -166,18 +166,21 @@ div.toolbar {
 		div.tab-content {
 			padding: $grid-gutter-width;
 			background-color: white;
-			h1 {
-				margin-bottom: 1em;
-				font-size: 1em;
-				font-weight: bold;
-			}
-			p {
-				margin-bottom: 1em;
-			}
-			ul {
-				margin-bottom: 1em;
-				margin-left: 1em;
-			}
+		}
+	}
+	div.tab-content {
+		h1 {
+			margin-bottom: 1em;
+			font-size: 1em;
+			font-weight: bold;
+		}
+		p {
+			margin-bottom: 1em;
+			white-space: normal;
+		}
+		ul {
+			margin-bottom: 1em;
+			margin-left: 1em;
 		}
 	}
 	&.content-dashboard {
